--- a/src/components/Home/components/styles.module.scss
+++ b/src/components/Home/components/styles.module.scss
@@ -4,7 +4,7 @@
   margin-bottom: 0;
   border: 1px solid #000;
   border-radius: 5px;
-  background-color: #333;
+  background-color: #292828;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   color: #fff;
 }
@@ -18,6 +18,7 @@
 .SelfieImage {
   height: 50vh;
   width: 50vh;
+  border-radius: 10px;
 }
 
 .BooksWrapper {
@@ -77,6 +78,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
